# psireg

./: .gitignore  Dockerfile  README.md  build.gradle  pyproject.toml  run_psi_evaluation.py  run_psi_study.py  train_rl.py
deployment/: README.md  deploy.sh  production.yml
examples/: controller_comparison_demo.py  load_demand_coordination_demo.py  predictive_layer_demo.py  real_simulation_demo.py  renewable_agents_demo.py  rl_demo.py  swarm_pheromone_demo.py  visualization_demo.py
scripts/: README.md  analyze_results.py  quick_summary.py  run_complete_study.py  visualize_psi_results.py
src/psireg/: __init__.py
src/psireg/cli/: __init__.py  cli.py  main.py  orchestrator.py
src/psireg/cli/scenarios/: __init__.py  base.py  storm_day.py
src/psireg/config/: __init__.py  loaders.py  schema.py
src/psireg/controllers/: __init__.py  base.py  comparison.py  ml.py  psi.py  rule.py  swarm.py
src/psireg/rl/: __init__.py  env.py  infer.py  predictive_layer.py  train.py
src/psireg/sim/: __init__.py  datafeed.py  engine.py  metrics.py
src/psireg/sim/assets/: __init__.py  base.py  battery.py  load.py  solar.py  thermal.py  wind.py
src/psireg/swarm/: __init__.py  pheromone.py
src/psireg/utils/: __init__.py  enums.py  logger.py  types.py
src/psireg/viz/: README.md  __init__.py  metrics.py  viz_comparison.py
tests/: test_battery_agent_enhanced.py  test_battery_storage.py  test_cli_main.py  test_config_loader.py  test_controller_base.py  test_controller_comparison.py  test_controller_integration.py  test_curtailment_hz_v_metrics.py  test_datafeed.py  test_datafeed_integration.py  test_demand_agent.py  test_demand_energy_requests.py  test_fossil_fuel_tracking.py  test_load_demand_assets.py  test_mae_calculation.py  test_metrics_collector.py  test_ml_controller.py  test_pheromone_field.py  test_predictive_layer.py  test_renewable_agents_integration.py  test_rl_basic.py  test_rl_env.py  test_rl_integration.py  test_rl_predictor.py  test_rule_controller.py  test_scenario_orchestrator.py  test_sim_engine.py  test_solar_agent.py  test_solar_wind_assets.py  test_storm_day_scenario.py  test_swarm_bus.py  test_swarm_controller.py  test_train_rl.py  test_utils_enums.py  test_utils_types.py  test_wind_agent.py
(+5 files in other folders)
